--- a/portofolio-website/index.html
+++ b/portofolio-website/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portofolio - Yoga Hardi Firdaus</title>
     <!-- Bootstrap CSS (Online / CDN) -->
     <link
@@ -282,3 +283,4 @@ I am also actively involved as IT Support for the DKV Laboratory, supporting lea
     <script src="assets/js/script.js"></script>
 </body>
 </html>
+
